--- a/.github/workflows/go-checks.yaml
+++ b/.github/workflows/go-checks.yaml
@@ -18,3 +18,5 @@ jobs:
         uses: golangci/golangci-lint-action@v3
         with:
           version: v1.55
+      - name: govluncheck
+        uses: golang/govulncheck-action@v1
