--- a/.github/workflows/go-checks.yaml
+++ b/.github/workflows/go-checks.yaml
@@ -18,5 +18,10 @@ jobs:
         uses: golangci/golangci-lint-action@v3
         with:
           version: v1.55
+  vulncheck:
+    name: vulncheck
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v3
       - name: govluncheck
         uses: golang/govulncheck-action@v1
