--- a/.github/workflows/go-checks.yaml
+++ b/.github/workflows/go-checks.yaml
@@ -25,3 +25,5 @@ jobs:
       - uses: actions/checkout@v3
       - name: govluncheck
         uses: golang/govulncheck-action@v1
+        with:
+          go-version-input: '1.21'
