--- a/.github/workflows/go-checks.yaml
+++ b/.github/workflows/go-checks.yaml
@@ -22,8 +22,7 @@ jobs:
     name: vulncheck
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v3
       - name: govluncheck
         uses: golang/govulncheck-action@v1
         with:
-          go-version-input: '1.21.5'
+          go-version-file: 'go.mod'
