--- a/buf.gen.yaml
+++ b/buf.gen.yaml
@@ -5,6 +5,8 @@ managed:
     default: github.com/opentdf/opentdf-v2-poc/gen
     except:
       - buf.build/bufbuild/protovalidate
+      - buf.build/googleapis/googleapis
+      - buf.build/grpc-ecosystem/grpc-gateway
 plugins:
   - plugin: buf.build/grpc-ecosystem/gateway:v2.18.1
     out: gen
@@ -19,3 +21,5 @@ plugins:
     out: gen
     opt:
       - paths=source_relative
+  - plugin: buf.build/grpc-ecosystem/openapiv2:v2.18.1
+    out: gen
