--- a/.air.toml
+++ b/.air.toml
@@ -7,7 +7,7 @@ tmp_dir = "tmp"
   bin = "./tmp/main"
   cmd = "go build -o ./tmp/main ."
   delay = 0
-  exclude_dir = ["assets", "tmp", "vendor", "testdata", "docs"]
+  exclude_dir = ["assets", "tmp", "vendor", "testdata", "docs", "examples"]
   exclude_file = []
   exclude_regex = ["_test.go"]
   exclude_unchanged = false
