--- a/.github/workflows/go-checks.yaml
+++ b/.github/workflows/go-checks.yaml
@@ -36,7 +36,7 @@ jobs:
           go-version: '1.21'
           cache: false
       - name: Unit Tests with the Go CLI
-        run: go test ./... -short -race
+        run: go test ./... -short -race -cover
   integration:
     name: integration tests
     runs-on: ubuntu-22.04
