--- a/buf.gen.yaml
+++ b/buf.gen.yaml
@@ -21,5 +21,5 @@ plugins:
     out: gen
     opt:
       - paths=source_relative
-  - plugin: buf.build/grpc-ecosystem/openapiv2:v2.18.1
-    out: gen
+  # - plugin: buf.build/grpc-ecosystem/openapiv2:v2.18.1
+  #   out: gen
