--- a/.github/workflows/go-checks.yaml
+++ b/.github/workflows/go-checks.yaml
@@ -48,3 +48,16 @@ jobs:
           cache: false
       - name: Integration Tests with the Go CLI
         run: go test ./tests -race
+  license:
+    name: license check
+    runs-on: ubuntu-22.04
+    steps:
+      - uses: actions/checkout@b4ffde65f46336ab88eb53be808477a3936bae11
+      - uses: actions/setup-go@0c52d547c9bc32b1aa3301fd7a9cb496313a4491
+        with:
+          go-version: '1.21'
+          cache: false
+      - name: install go-licenses
+        run: go install github.com/google/go-licenses@5348b744d0983d85713295ea08a20cca1654a45e
+      - name: check licenses
+        run: go-licenses check --include_tests ./...
