--- a/.github/workflows/go-checks.yaml
+++ b/.github/workflows/go-checks.yaml
@@ -60,4 +60,4 @@ jobs:
       - name: install go-licenses
         run: go install github.com/google/go-licenses@5348b744d0983d85713295ea08a20cca1654a45e
       - name: check licenses
-        run: go-licenses check --include_tests ./...
+        run: go-licenses check --disallowed_types=forbidden --include_tests ./...
