--- a/.github/workflows/go-checks.yaml
+++ b/.github/workflows/go-checks.yaml
@@ -38,8 +38,9 @@ jobs:
         with:
           go-version: '1.21'
           cache: false
-      - name: Unit Tests with the Go CLI
-        run: go test ./... -short -race -cover
+      - run: make go.work
+      - run: go test ./... -short -race -cover
+      - run: cd sdk && go test ./... -short -race -cover
   integration:
     name: integration tests
     runs-on: ubuntu-22.04
@@ -49,5 +50,6 @@ jobs:
         with:
           go-version: '1.21'
           cache: false
+      - run: make go.work
       - name: Integration Tests with the Go CLI
         run: go test ./integration -race
