--- a/.github/workflows/go-checks.yaml
+++ b/.github/workflows/go-checks.yaml
@@ -23,6 +23,7 @@ jobs:
         with:
           go-version: '1.21'
           cache: false
+      - run: make go.work
       - name: golangci-lint
         uses: golangci/golangci-lint-action@3a919529898de77ec3da873e3063ca4b10e7f5cc
         with:
