Revert "Update go-checks.yaml"
This reverts commit 98d9081236e4eaa07505ec6bb0176245cae36faa.

--- a/.github/workflows/go-checks.yaml
+++ b/.github/workflows/go-checks.yaml
@@ -29,7 +29,7 @@ jobs:
         uses: golangci/golangci-lint-action@3a919529898de77ec3da873e3063ca4b10e7f5cc
         with:
           version: v1.55
-          only-new-issues: false
+          only-new-issues: true
           working-directory: ${{ matrix.directory }}
   unit:
     name: unit tests
