--- a/.github/workflows/go-checks.yaml
+++ b/.github/workflows/go-checks.yaml
@@ -4,6 +4,8 @@ on:
   pull_request:
     branches:
       - main
+env:
+  GOPRIVATE: github.com/opentdf/opentdf-v2-poc
 jobs:
   golangci:
     name: lint
@@ -40,9 +42,10 @@ jobs:
         with:
           go-version: '1.21'
           cache: false
+      - run: git config --global url.https://${{secrets.PERSONAL_ACCESS_TOKEN}}@github.com/.insteadOf https://github.com/
       - run: make go.work
-      - run: go test ./... -short -race -cover
       - run: cd sdk && go test ./... -short -race -cover
+      - run: go test ./... -short -race -cover
   integration:
     name: integration tests
     runs-on: ubuntu-22.04
@@ -52,6 +55,7 @@ jobs:
         with:
           go-version: '1.21'
           cache: false
+      - run: git config --global url.https://${{secrets.PERSONAL_ACCESS_TOKEN}}@github.com/.insteadOf https://github.com/
       - run: make go.work
       - name: Integration Tests with the Go CLI
         run: go test ./integration -race
