--- a/.github/workflows/go-checks.yaml
+++ b/.github/workflows/go-checks.yaml
@@ -25,7 +25,7 @@ jobs:
       - uses: actions/setup-go@0c52d547c9bc32b1aa3301fd7a9cb496313a4491
         with:
           go-version: '1.21'
-          cache: false
+      - run: go env -w GOPRIVATE=github.com/opentdf/*
       - run: make go.work
       - name: golangci-lint
         uses: golangci/golangci-lint-action@3a919529898de77ec3da873e3063ca4b10e7f5cc
@@ -42,6 +42,7 @@ jobs:
         with:
           go-version: '1.21'
           cache: false
+      - run: go env -w GOPRIVATE=github.com/opentdf/*
       - run: git config --global url.https://${{secrets.PERSONAL_ACCESS_TOKEN}}@github.com/.insteadOf https://github.com/
       - run: make go.work
       - run: cd sdk && go test ./... -short -race -cover
@@ -55,6 +56,7 @@ jobs:
         with:
           go-version: '1.21'
           cache: false
+      - run: go env -w GOPRIVATE=github.com/opentdf/*
       - run: git config --global url.https://${{secrets.PERSONAL_ACCESS_TOKEN}}@github.com/.insteadOf https://github.com/
       - run: make go.work
       - name: Integration Tests with the Go CLI
