--- a/.github/workflows/go-checks.yaml
+++ b/.github/workflows/go-checks.yaml
@@ -63,6 +63,6 @@ jobs:
       - uses: docker/setup-buildx-action@v3
       - uses: docker/build-push-action@v5.1.0
         with:
-          context: .false
+          context: .
           file: ./Dockerfile
           push: false
