--- a/.github/workflows/checks.yaml
+++ b/.github/workflows/checks.yaml
@@ -16,7 +16,7 @@ on:
 jobs:
   pr:
     name: Validate PR title
-    if: github.event_name == 'pull_request_target'
+    if: contains(fromJSON('["pull_request", "pull_request_target"]'), github.event_name)
     runs-on: ubuntu-22.04
     permissions:
       pull-requests: read
