--- a/.github/workflows/checks.yaml
+++ b/.github/workflows/checks.yaml
@@ -103,6 +103,11 @@ jobs:
         with:
           input: proto
           against: "https://github.com/opentdf/opentdf-v2-poc.git#branch=main,subdir=proto"
+      - uses: actions/setup-go@0c52d547c9bc32b1aa3301fd7a9cb496313a4491
+        with:
+          go-version: "1.21"
+          cache-dependency-path: sdk/go.sum
+      - run: go get -u github.com/pseudomuto/protoc-gen-doc/cmd/protoc-gen-doc
       - run: buf generate proto
       - run: git diff
       - run: git diff-files --ignore-submodules
