--- a/.github/workflows/checks.yaml
+++ b/.github/workflows/checks.yaml
@@ -106,8 +106,7 @@ jobs:
       - uses: actions/setup-go@0c52d547c9bc32b1aa3301fd7a9cb496313a4491
         with:
           go-version: "1.21"
-          cache-dependency-path: sdk/go.sum
-      - run: go get -u github.com/pseudomuto/protoc-gen-doc/cmd/protoc-gen-doc
+      - run: go get github.com/pseudomuto/protoc-gen-doc/cmd/protoc-gen-doc
       - run: buf generate proto
       - run: git diff
       - run: git diff-files --ignore-submodules
