--- a/.github/workflows/checks.yaml
+++ b/.github/workflows/checks.yaml
@@ -105,7 +105,7 @@ jobs:
           against: "https://github.com/opentdf/opentdf-v2-poc.git#branch=main,subdir=proto"
 
   ci:
-    if: always() && contains(fromJSON('["push", "pull_request"]'), github.event_name)
+    if: contains(fromJSON('["push", "pull_request"]'), github.event_name)
     needs:
       - pr
       - go
