--- a/.github/workflows/checks.yaml
+++ b/.github/workflows/checks.yaml
@@ -111,7 +111,7 @@ jobs:
             ./go.sum
             sdk/go.sum
             examples/attributes/go.sum
-      - run: go get -u github.com/pseudomuto/protoc-gen-doc/cmd/protoc-gen-doc
+      - run: go install github.com/pseudomuto/protoc-gen-doc/cmd/protoc-gen-doc
       - run: make buf-generate
       - run: git diff
       - run: git diff-files --ignore-submodules
