--- a/.github/workflows/checks.yaml
+++ b/.github/workflows/checks.yaml
@@ -112,6 +112,7 @@ jobs:
             ./go.sum
             sdk/go.sum
             examples/attributes/go.sum
+      - run: go get github.com/pseudomuto/protoc-gen-doc/cmd/protoc-gen-doc
       - run: go install github.com/pseudomuto/protoc-gen-doc/cmd/protoc-gen-doc
       - run: make buf-generate
       - run: git diff
