--- a/.github/workflows/checks.yaml
+++ b/.github/workflows/checks.yaml
@@ -74,6 +74,10 @@ jobs:
             examples/go.sum
       - run: make go.work
       - run: go test ./integration -race
+      - run: docker-compose up -d
+      - run: air &
+      - run: grpcurl -plaintext localhost:9000 list
+      - run: grpcurl -plaintext localhost:9000 list attributes.AttributesService
 
   image:
     name: image build
