--- a/.github/workflows/checks.yaml
+++ b/.github/workflows/checks.yaml
@@ -76,6 +76,7 @@ jobs:
       - run: go test ./integration -race
       - run: docker-compose up -d
       - run: air &
+      - run: go install github.com/fullstorydev/grpcurl/cmd/grpcurl@v1.8.9
       - run: grpcurl -plaintext localhost:9000 list
       - run: grpcurl -plaintext localhost:9000 list attributes.AttributesService
 
