--- a/.github/workflows/checks.yaml
+++ b/.github/workflows/checks.yaml
@@ -75,7 +75,8 @@ jobs:
       - run: make go.work
       - run: go test ./integration -race
       - run: docker-compose up -d
-      - run: air &
+      - run: cp example-opentdf.yaml opentdf.yaml
+      - run: go run . start &
       - run: go install github.com/fullstorydev/grpcurl/cmd/grpcurl@v1.8.9
       - run: grpcurl -plaintext localhost:9000 list
       - run: grpcurl -plaintext localhost:9000 list attributes.AttributesService
