--- a/.github/workflows/checks.yaml
+++ b/.github/workflows/checks.yaml
@@ -74,11 +74,12 @@ jobs:
             examples/go.sum
       - run: make go.work
       - run: go test ./integration -race
-      - run: docker-compose up --wait
+      - run: docker-compose version
+      - run: docker-compose up -d
       - run: cp example-opentdf.yaml opentdf.yaml
       - run: go run . start &
       - run: go install github.com/fullstorydev/grpcurl/cmd/grpcurl@v1.8.9
-      - run: sleep 5
+      - run: sleep 15
       - run: grpcurl -plaintext localhost:9000 list
       - run: grpcurl -plaintext localhost:9000 list attributes.AttributesService
 
