--- a/.github/workflows/checks.yaml
+++ b/.github/workflows/checks.yaml
@@ -100,7 +100,7 @@ jobs:
         with:
           input: proto
       - uses: bufbuild/buf-breaking-action@a074e988ee34efcd4927079e79c611f428354c01
-        # TODO() Block on breaking changes after protos are frozen
+        # TODO(#212) Block on breaking changes after protos are frozen
         continue-on-error: true
         with:
           input: proto
