--- a/.golangci.yaml
+++ b/.golangci.yaml
@@ -235,7 +235,7 @@ linters:
     #- decorder # checks declaration order and count of types, constants, variables and functions
     #- gci # controls golang package import order and makes it always deterministic
     #- ginkgolinter # [if you use ginkgo/gomega] enforces standards of using ginkgo and gomega
-    - godox # detects FIXME, TODO and other comment keywords
+    # - godox # detects FIXME, TODO and other comment keywords
     #- goheader # checks is file header matches to pattern
     - interfacebloat # checks the number of methods inside an interface
     - ireturn # accept interfaces, return concrete types
