--- a/.github/workflows/checks.yaml
+++ b/.github/workflows/checks.yaml
@@ -104,13 +104,13 @@ jobs:
       - uses: bufbuild/buf-setup-action@382440cdb8ec7bc25a68d7b4711163d95f7cc3aa
       - uses: bufbuild/buf-lint-action@044d13acb1f155179c606aaa2e53aea304d22058
         with:
-          input: proto
+          input: services
       - uses: bufbuild/buf-breaking-action@a074e988ee34efcd4927079e79c611f428354c01
         # TODO(#212) Block on breaking changes after protos are frozen
         continue-on-error: true
         with:
-          input: proto
-          against: "https://github.com/opentdf/platform.git#branch=main,subdir=proto"
+          input: services
+          against: "https://github.com/opentdf/platform.git#branch=main,subdir=services"
       - uses: actions/setup-go@0c52d547c9bc32b1aa3301fd7a9cb496313a4491
         with:
           go-version: "1.21"
