--- a/.github/workflows/checks.yaml
+++ b/.github/workflows/checks.yaml
@@ -1,4 +1,4 @@
-name: "Checks"
+name: 'Checks'
 
 on:
   pull_request:
@@ -35,14 +35,14 @@ jobs:
     strategy:
       matrix:
         directory:
-          - "."
+          - '.'
           - sdk
           - examples
     steps:
       - uses: actions/checkout@b4ffde65f46336ab88eb53be808477a3936bae11
       - uses: actions/setup-go@0c52d547c9bc32b1aa3301fd7a9cb496313a4491
         with:
-          go-version: "1.21"
+          go-version: '1.21'
           cache-dependency-path: |
             ./go.sum
             sdk/go.sum
@@ -66,7 +66,7 @@ jobs:
       - uses: actions/checkout@b4ffde65f46336ab88eb53be808477a3936bae11
       - uses: actions/setup-go@0c52d547c9bc32b1aa3301fd7a9cb496313a4491
         with:
-          go-version: "1.21"
+          go-version: '1.21'
           cache-dependency-path: |
             ./go.sum
             sdk/go.sum
@@ -80,7 +80,7 @@ jobs:
       - run: sleep 15
         name: wake me up when github action runner supports docker-compose --wait
       - run: grpcurl -plaintext localhost:9000 list
-      - run: grpcurl -plaintext localhost:9000 list attributes.AttributesService
+      - run: grpcurl -plaintext localhost:9000 list policy.attributes.AttributesService
 
   image:
     name: image build
@@ -110,10 +110,10 @@ jobs:
         continue-on-error: true
         with:
           input: services
-          against: "https://github.com/opentdf/platform.git#branch=main,subdir=services"
+          against: 'https://github.com/opentdf/platform.git#branch=main,subdir=services'
       - uses: actions/setup-go@0c52d547c9bc32b1aa3301fd7a9cb496313a4491
         with:
-          go-version: "1.21"
+          go-version: '1.21'
           cache-dependency-path: |
             ./go.sum
             sdk/go.sum
