--- a/.github/workflows/checks.yaml
+++ b/.github/workflows/checks.yaml
@@ -58,6 +58,22 @@ jobs:
       - run: go test ./... -short
         working-directory: ${{ matrix.directory }}
 
+
+  kas:
+    runs-on: ubuntu-latest
+    timeout-minutes: 30
+    steps:
+      - name: Checkout
+        uses: actions/checkout@8530928916aaef40f59e6f221989ccb31f5759e7
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@f95db51fddba0c2d1ec667646a06c2ce06100226
+      - name: Build and test
+        uses: docker/build-push-action@4a13e500e55cf31b7a5d59a38ab2040ab0f42f56
+        with:
+          context: kas
+          push: false
+          target: tester
+
   integration:
     name: integration tests
     runs-on: ubuntu-22.04
@@ -133,6 +149,7 @@ jobs:
       - go
       - integration
       - image
+      - kas
       - buflint
     runs-on: ubuntu-latest
     steps:
