--- a/.github/workflows/checks.yaml
+++ b/.github/workflows/checks.yaml
@@ -118,7 +118,7 @@ jobs:
             examples/go.sum
       - run: go get github.com/pseudomuto/protoc-gen-doc/cmd/protoc-gen-doc
       - run: go install github.com/pseudomuto/protoc-gen-doc/cmd/protoc-gen-doc
-      - run: rm -rf sdkjava/ protocol/go/
+      - run: rm -rf sdkjava/io sdkjava/src protocol/go/
       - run: make buf-generate
       - name: Restore go.mod after installing protoc-gen-doc
         run: git restore {.,protocol/go}/go.{mod,sum}
