ci(vet): Adds go vet command to ci

--- a/.github/workflows/checks.yaml
+++ b/.github/workflows/checks.yaml
@@ -55,9 +55,11 @@ jobs:
           version: v1.55
           only-new-issues: true
           working-directory: ${{ matrix.directory }}
+      - run: go vet ./...
+        working-directory: ${{ matrix.directory }}
       - run: go test ./... -short
         working-directory: ${{ matrix.directory }}
-
+    
   integration:
     name: integration tests
     runs-on: ubuntu-22.04
