checkpoint getentitlements tests working

--- a/internal/fixtures/policy_fixtures.yaml
+++ b/internal/fixtures/policy_fixtures.yaml
@@ -225,6 +225,22 @@ subject_mappings:
         - standard: STANDARD_ACTION_TRANSMIT
         - custom: custom_action_1
 
+    subject_mapping_subject_simple_in:
+      id: 3c623ede-df88-4906-8a78-ebdfacadcd57
+      attribute_value_id: 74babca6-016f-4f3e-a99b-4e46ea8d0fd8
+      # subject_condition_simple_in
+      subject_condition_set_id: 3c623ede-df88-4906-8a78-ebdfacadcd57
+      actions:
+        - standard: STANDARD_ACTION_DECRYPT
+
+    subject_mapping_subject_simple_not_in:
+      id: 1b9508a7-746a-4705-a1f1-4b6e676377ce
+      attribute_value_id: 532e5957-28f7-466d-91e2-493e9431cd83
+      # subject_condition_simple_not_in
+      subject_condition_set_id: cf17ec4c-d206-4b74-b3db-5ce07d6995cc
+      actions:
+        - standard: STANDARD_ACTION_DECRYPT
+
     subject_mapping_scenario_blue:
       id: 1748761a-bd8c-4b23-8560-16ba7a181f19
       attribute_value_id: c2140825-0969-44c9-8dd6-5d7e0a856b9c
@@ -302,7 +318,7 @@ subject_condition_set:
                       - manager
                       - director
                       - vice_president
-    subject_condition_simple:
+    subject_condition_simple_in:
       id: 3c623ede-df88-4906-8a78-ebdfacadcd57
       condition:
         subject_sets:
@@ -313,6 +329,17 @@ subject_condition_set:
                     operator: SUBJECT_MAPPING_OPERATOR_ENUM_IN
                     subject_external_values:
                       - some_value
+    subject_condition_simple_not_in:
+      id: cf17ec4c-d206-4b74-b3db-5ce07d6995cc
+      condition:
+        subject_sets:
+          - condition_groups:
+              - boolean_operator: CONDITION_BOOLEAN_TYPE_ENUM_OR
+                conditions:
+                  - subject_external_field: some_other_field123
+                    operator: SUBJECT_MAPPING_OPERATOR_ENUM_NOT_IN
+                    subject_external_values:
+                      - some_other_value_123
     subject_condition_working_group_blue_scenario:
       id: 10d03422-7eae-43b9-ac3b-d10400171858
       condition:
