--- a/.github/workflows/checks.yaml
+++ b/.github/workflows/checks.yaml
@@ -79,7 +79,7 @@ jobs:
           echo "directories.tokendir = $(pwd)/.tmp/tokens" > softhsm2.conf
           echo "log.level = DEBUG" >> softhsm2.conf
           export SOFTHSM2_CONF=$(pwd)/softhsm2.conf
-      - run: SOFTHSM2_CONF="$(pwd)/softhsm2.conf" go test ./... -short
+      - run: go test ./... -short
         working-directory: ${{ matrix.directory }}
 
   integration:
@@ -170,6 +170,7 @@ jobs:
         run: |
           mvn -f sdkjava/pom.xml clean install
   ci:
+    name: "Verify required job ran successfully"
     needs:
       - go
       - integration
@@ -177,10 +178,9 @@ jobs:
       - buflint
       - pr
     runs-on: ubuntu-latest
-    if: always()
+    if: always() && contains(needs.*.result, 'failure')
     steps:
-      - if: contains(needs.*.result, 'failure')
-        run: exit 1
+      - run: echo "Failed due to ${{ contains(needs.*.result, 'failure') }}" && exit 1
 
   license:
     name: license check
