--- a/.github/workflows/checks.yaml
+++ b/.github/workflows/checks.yaml
@@ -78,7 +78,7 @@ jobs:
           mkdir -p $(pwd)/.tmp/tokens
           echo "directories.tokendir = $(pwd)/.tmp/tokens" > softhsm2.conf
           echo "log.level = DEBUG" >> softhsm2.conf
-          export SOFTHSM2_CONF=$(pwd)/softhsm2.conf
+          echo "SOFTHSM2_CONF=$(pwd)/softhsm2.conf" >> "$GITHUB_ENV"
       - run: go test ./... -short
         working-directory: ${{ matrix.directory }}
 
