--- a/.github/workflows/checks.yaml
+++ b/.github/workflows/checks.yaml
@@ -163,8 +163,8 @@ jobs:
       - name: Set up JDK
         uses: actions/setup-java@v3
         with:
-          java-version: '20'
-          distribution: 'adopt'
+          java-version: "20"
+          distribution: "adopt"
           server-id: github
       - name: Compile Java SDK
         run: |
@@ -181,7 +181,7 @@ jobs:
     if: always()
     steps:
       - if: contains(needs.*.result, 'failure')
-      	run: echo "Failed due to ${{ contains(needs.*.result, 'failure') }}" && exit 1
+        run: echo "Failed due to ${{ contains(needs.*.result, 'failure') }}" && exit 1
 
   license:
     name: license check
