--- a/.github/workflows/checks.yaml
+++ b/.github/workflows/checks.yaml
@@ -97,13 +97,18 @@ jobs:
             sdk/go.sum
       - run: make go.work
       - run: go test ./integration -race
-      - run: docker-compose up -d
+      - run: docker-compose up -d --wait
       - run: cp example-opentdf.yaml opentdf.yaml
-      - run: sleep 15
-      - run: go run . start &
-      - run: go install github.com/fullstorydev/grpcurl/cmd/grpcurl@v1.8.9
-      - run: sleep 15
-        name: wake me up when github action runner supports docker-compose --wait
+      - uses: JarvusInnovations/background-action@313d37130873d82c33fc907b9b78e932aec8e990
+        name: start server in background
+        with:
+          run: |
+            go run . start
+          wait-on: |
+            tcp:localhost:9000
+          log-output-if: true
+      - name: install grpcurl
+        run: go install github.com/fullstorydev/grpcurl/cmd/grpcurl@v1.8.9
       - run: grpcurl -plaintext localhost:9000 list
       - run: grpcurl -plaintext localhost:9000 list policy.attributes.AttributesService
 
