--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -29,6 +29,7 @@ services:
       interval: 5s
       timeout: 10s
       retries: 3
+      start_period: 2m
   keycloakdb:
     image: postgres
     restart: always
