--- a/.github/workflows/checks.yaml
+++ b/.github/workflows/checks.yaml
@@ -107,8 +107,7 @@ jobs:
           wait-on: |
             tcp:localhost:9000
           log-output-if: true
-      - name: install grpcurl
-        run: go install github.com/fullstorydev/grpcurl/cmd/grpcurl@v1.8.9
+      - run: go install github.com/fullstorydev/grpcurl/cmd/grpcurl@v1.8.9
       - run: grpcurl -plaintext localhost:9000 list
       - run: grpcurl -plaintext localhost:9000 list policy.attributes.AttributesService
 
