--- a/.github/workflows/checks.yaml
+++ b/.github/workflows/checks.yaml
@@ -199,6 +199,8 @@ jobs:
         with:
           go-version: "1.21"
           cache: false
+      - run: go mod download
+      - run: go mod verify
       - uses: dorny/paths-filter@de90cc6fb38fc0963ad72b210f1f284cd68cea36
         id: sdk-changed
         with:
