--- a/.github/workflows/checks.yaml
+++ b/.github/workflows/checks.yaml
@@ -200,11 +200,15 @@ jobs:
           go-version: "1.21.8"
           cache: false
       - uses: dorny/paths-filter@de90cc6fb38fc0963ad72b210f1f284cd68cea36
-        id: sdk-changed
+        id: deps-changed
         with:
           filters: |
-            src:
-              - 'sdk/**'
+            examples:
+              - 'examplesk/go.*'
+            platform:
+              - './go.*'
+            sdk:
+              - 'sdk/go.*'
       - name: install go-licenses
         run: go install github.com/google/go-licenses@5348b744d0983d85713295ea08a20cca1654a45e
       - name: check platform licenses
