--- a/.github/workflows/checks.yaml
+++ b/.github/workflows/checks.yaml
@@ -41,7 +41,7 @@ jobs:
       - uses: actions/checkout@b4ffde65f46336ab88eb53be808477a3936bae11
       - uses: actions/setup-go@0c52d547c9bc32b1aa3301fd7a9cb496313a4491
         with:
-          go-version: "1.21.8"
+          go-version: "1.21"
           cache-dependency-path: |
             ./go.sum
             examples/go.sum
@@ -91,7 +91,7 @@ jobs:
       - uses: actions/checkout@b4ffde65f46336ab88eb53be808477a3936bae11
       - uses: actions/setup-go@0c52d547c9bc32b1aa3301fd7a9cb496313a4491
         with:
-          go-version: "1.21.8"
+          go-version: "1.21"
           cache-dependency-path: |
             ./go.sum
             examples/go.sum
@@ -111,6 +111,7 @@ jobs:
           wait-on: |
             tcp:localhost:9000
           log-output-if: true
+          wait-for: 60s
       - run: go install github.com/fullstorydev/grpcurl/cmd/grpcurl@v1.8.9
       - run: grpcurl -plaintext localhost:9000 list
       - run: grpcurl -plaintext localhost:9000 list policy.attributes.AttributesService
@@ -144,7 +145,7 @@ jobs:
           against: "https://github.com/opentdf/platform.git#branch=main,subdir=services"
       - uses: actions/setup-go@0c52d547c9bc32b1aa3301fd7a9cb496313a4491
         with:
-          go-version: "1.21.8"
+          go-version: "1.21"
           cache-dependency-path: |
             ./go.sum
             protocol/go/go.sum
@@ -197,7 +198,7 @@ jobs:
       - uses: actions/checkout@b4ffde65f46336ab88eb53be808477a3936bae11
       - uses: actions/setup-go@0c52d547c9bc32b1aa3301fd7a9cb496313a4491
         with:
-          go-version: "1.21.8"
+          go-version: "1.21"
           cache: false
       - name: install go-licenses
         run: go install github.com/google/go-licenses@5348b744d0983d85713295ea08a20cca1654a45e
