--- a/.github/workflows/checks.yaml
+++ b/.github/workflows/checks.yaml
@@ -58,7 +58,7 @@ jobs:
           working-directory: ${{ matrix.directory }}
           only-new-issues: true
       - name: golangci-lint on push
-        if: github.event_name == 'push'
+        if: github.event_name == 'push' || github.event_name == 'merge_group'
         uses: golangci/golangci-lint-action@3a919529898de77ec3da873e3063ca4b10e7f5cc
         with:
           version: v1.55
